cutout old metabolomics view

--- a/Modular/partials/metabolomics.html
+++ b/Modular/partials/metabolomics.html
@@ -36,7 +36,7 @@
                     <label>Halogenated compounds <input type="checkbox" ng-model="halogenated" ng-checked="0">
                     </label>
                 </div>
-                <a class="btn btn-block btn-primary" style="margin: 0 auto;" ng-disabled="enable" ui-sref="AlternateMetabolomicsCompounds">
+                <a class="btn btn-block btn-primary" style="margin: 0 auto;" ng-disabled="enable" ui-sref="metabolomicsCompounds">
                 <span class="glyphicon glyphicon-search"></span> Search</a>
             </div>
         </div>
