a number of minor bugfixes

--- a/Modular/partials/general.html
+++ b/Modular/partials/general.html
@@ -12,7 +12,7 @@
 			<td>{{data.Formula}}</td>
 		</tr>
 		<tr>
-			<td>Mass</td>
+			<td>Exact Mass</td>
 			<td>{{data.Mass}}</td>
 		</tr>
 		<tr>
