--- a/Modular/partials/overview.html
+++ b/Modular/partials/overview.html
@@ -30,7 +30,7 @@
 					<table class="table table-striped table-hover">    
 						<tbody>
 							<tr ng-repeat="id in val" >
-								<td><a ng-click="dbLink(key, id)">{{id}}</a></td>
+								<td><a href="#" ng-click="dbLink(key, id)">{{id}}</a></td>
 							</tr>
 						</tbody>
 					</table>
