--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -2,7 +2,7 @@
     <br><input id="rxn-filter" class=form-control type="text" ng-model="searchOn" placeholder="Filter by EC class">
 </div>
 <pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm"
-            boundary-links="true" num-pages="numPages"  style="{cursor: pointer; vertical-align: top}"></pagination>
+            boundary-links="true" items-per-page="numPerPage"  style="{cursor: pointer; vertical-align: top}"></pagination>
 <br>
 <table class="table table-striped table-hover">
 	<tbody>
@@ -34,4 +34,4 @@
 	</tbody>
 </table>
 
-<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
