--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -27,7 +27,7 @@
 
 </tr>
 </thead>
-            <tr ng-repeat="f in filteredData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.id})">
+            <tr ng-repeat="f in filteredData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.MINE_id})">
               <td style="vertical-align:middle">{{f.name}}</td>
               <td style="vertical-align:middle">{{f.adduct}}</td>
               <td style="vertical-align:middle">{{f.formula}}</td>
