google form bug reporting and client request

--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -24,16 +24,15 @@
 <h4>How can I integrate your database into my tool/pipeline?</h4>
 <div class="well">
     We offer client APIs in JavaScript, Python and Perl which cover all the functionality of this website. Please
-        <a href="mailto:minedatabasescontact@gmail.com?Subject=Client%20request" target="_top"> contact us</a>
-    to request the most recent version. Alternatively, you may request all the unannotated(license restrictions, sorry)
-    structures as a SDF file.
+    <a href="https://docs.google.com/forms/d/1n-EV-nfRr-Ck6CW5MSqKcVjepAfh5ymERu7Zu9bUjqk/viewform?usp=send_form"> contact us</a>
+    to request the most recent version.
 </div>
 
 <h4>I found an error/ I'm skeptical about the validity of a compound</h4>
 <div class="well">
-    We would love to hear about it. Please let us know by sending an email to
-        <a href="mailto:minedatabasescontact@gmail.com?" target="_top"> minedatabasescontact@gmail.com</a>
-    and let us know. If reporting a bug, please include information as to how the error was generated.
+    We would love to hear about it. Please let us know by using our
+    <a href="https://docs.google.com/forms/d/1B0OqkL8Fc16-V-t71fMDpVoMp98O_LwgeOcJa7NRmFI/viewform"> bug reporting form.</a>
+    If reporting a bug, please include information as to how the error was generated.
 </div>
 
 <h4>Are there any restrictions on the use of this website and APIs?</h4>
