--- a/Modular/partials/overview.html
+++ b/Modular/partials/overview.html
@@ -30,7 +30,7 @@
 					<table class="table table-striped table-hover">    
 						<tbody>
 							<tr ng-repeat="id in val" >
-								<td><a href="#" ng-click="dbLink(key, id)">{{id}}</a></td>
+								<td><a ng-href="{{dbLink(key, id)}}">{{id}}</a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -44,7 +44,7 @@
 		<table class="table table-striped table-hover">    
 			<tbody>
 				<tr ng-repeat="keggMap in data.Pathways" >
-					<td><a ng-click="mapLink(keggMap)">{{keggMap}}</a></td>
+					<td><a ng-href="{{mapLink(keggMap)}}">{{keggMap}}</a></td>
 				</tr>
 			</tbody>  
 		</table>
