converted to mz search w/ kovats & logP

--- a/Modular/partials/models.html
+++ b/Modular/partials/models.html
@@ -11,7 +11,7 @@
     <!--<span class="glyphicon glyphicon-trash pull-right" style="cursor: pointer;"></span>-->
 </div>
 <input id="models_text" type="text"
-       placeholder="Search Reconstructions" ng-model ="model">
+       placeholder="Search Reconstructions" ng-model ="model_term">
 <p ng-hide="modelList">Type an organism name eg. yeast</p>
 <br>
 <br>
