added kovats data to compound pages

--- a/Modular/partials/general.html
+++ b/Modular/partials/general.html
@@ -31,6 +31,14 @@
 			<td>NP likeness</td>
 			<td>{{data.NP_likeness}}</td>
 		</tr>
+        <tr>
+			<td>logP</td>
+			<td>{{data.logP}}</td>
+		</tr>
+        <tr>
+			<td>Kovats RI</td>
+			<td>{{data.minKovatsRI}}-{{data.maxKovatsRI}}</td>
+		</tr>
 	</tbody>  
 </table>
 <div hidden class="panel panel-default col-md-6" id="cpd-img">
