--- a/Modular/partials/compounds.html
+++ b/Modular/partials/compounds.html
@@ -1,6 +1,6 @@
 
 <br>
-<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" items-per-page="numPerPage" class="pagination-sm" boundary-links="true"  style="cursor: pointer;"></pagination>
 <h3>{{items}} </h3>
 <table class="table table-striped table-hover">  
     <thead>  
@@ -22,4 +22,4 @@
     </tbody>  
     
 </table>
-<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" num-pages="numPages"  style="cursor: pointer;"></pagination>
+<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" items-per-page="numPerPage" class="pagination-sm" boundary-links="true"  style="cursor: pointer;"></pagination>
