--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -1,31 +1,36 @@
 <div class="container">
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-sm-6">
             <pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
             </div>
-            <div class="col-sm-4" ></br></br>{{begin}} - {{end}} of {{totalItems}} Total Hits: {{items}}
-                <button id="met-download" class="btn-primary" ng-show="displayData" ng-click="downloadResults()">Download Results</button>
+            <div style="text-align: right" class="col-sm-4" >
+                <br><button id="met-download" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
+                <br><b>{{begin}} - {{end}} of {{totalItems}} Total Hits: {{items}}</b>
                 <div ui-view></div>
             </div>
         </div>
     </div>
-<table class="table table-striped table-hover">
-  <thead>
-<tr>
-<th>M/Z</th>
-<th>Adduct</th>
-<th>Formula</th>
-<th>Compound</th>
-<th>MINE ID</th>
-
-</tr>
+<table class="table table-striped table-hover" style="text-align: center">
+<thead>
+  <tr>
+    <th>M/Z</th>
+    <th>Adduct</th>
+    <th>Formula</th>
+    <th>Compound</th>
+    <th>MINE ID</th>
+    <th>logP</th>
+    <th>Kovats RI</th>
+    <th>NP Likeness</th>
+  </tr>
 <tr id="filters">
-<th><input type="text" placeholder="Search" ng-model="searchMZ"></th>
-<th><input type="text" placeholder="Search" ng-model="searchAdduct"></th>
-<th><input type="text" placeholder="Search with RegEx" ng-model="searchFormula"></th>
-<th><input type="text" placeholder="Search" ng-model="searchCompound"></th>
-<th><input type="text" placeholder="Search" ng-model="searchMINE"></th>
-
+    <th><input type="text" class="form-control" style='width: 100px' placeholder="Search" ng-model="searchMZ"></th>
+    <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchAdduct"></th>
+    <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchFormula"></th>
+    <th><input type="text" class="form-control" placeholder="Search" ng-model="searchCompound"></th>
+    <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchMINE"></th>
+    <th><button class="btn btn-block btn-primary" ng-click="sortColumn='logP'; sortInvert=!sortInvert"> Sort by </button></th>
+    <th><button class="btn btn-block btn-primary" ng-click="sortColumn='minKovatsRI'; sortInvert=!sortInvert">Sort by</button></th>
+    <th><button class="btn btn-block btn-primary" ng-click="sortColumn='npLikeness'; sortInvert=!sortInvert">Sort by</button></th>
 </tr>
 </thead>
             <tr ng-repeat="f in displayData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.MINE_id})">
@@ -41,6 +46,9 @@
             </Ui>
               </td>
               <td style="vertical-align:middle">{{f.MINE_id}}</td>
+              <td style="vertical-align: middle">{{f.logP}}</td>
+              <td style="vertical-align: middle">{{f.minKovatsRI}}-{{f.maxKovatsRI}}</td>
+              <td style="vertical-align: middle">{{f.npLikeness}}</td>
             </tr>
           </table>
     </div>
