--- a/Modular/partials/general.html
+++ b/Modular/partials/general.html
@@ -20,7 +20,7 @@
 			<td>{{data.Charge}}</td>
 		</tr>
 		<tr>
-			<td>Inchi key</td>
+			<td>InChIKey</td>
 			<td>{{data.Inchikey}}</td>
 		</tr>
 		<tr>
@@ -28,7 +28,9 @@
 			<td>{{data.SMILES}}</td>
 		</tr>
 		<tr>
-			<td>NP likeness</td>
+			<td>NP likeness <span tooltip="NP Likeness is a quantitative measure of how similar a given compound is to
+			known natural products. The values range from -3 (very synthetic) to 3 (very natural)."
+                                  class="glyphicon glyphicon-question-sign"></span></td>
 			<td>{{data.NP_likeness}}</td>
 		</tr>
         <tr>
