--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -20,7 +20,9 @@
     <th>MINE ID</th>
     <th>logP</th>
     <th>Kovats RI</th>
-    <th>NP Likeness</th>
+    <th>NP Likeness<span tooltip="NP Likeness is a quantitative measure of how similar a given compound is to known
+                                  natural products. The values range from -3 (very synthetic) to 3 (very natural)."
+                         class="glyphicon glyphicon-question-sign"></span></th>
   </tr>
 <tr id="filters">
     <th><input type="text" class="form-control" style='width: 100px' placeholder="Search" ng-model="searchMZ"></th>
