fixed reaction numbering and renamed some variables for readability

--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -52,7 +52,7 @@
           <td style="text-align: center">
           <ui style="list-style: none;">
             <li>
-              <img id="met-img" class="logo" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{f.id}}.svg" width="100" alt="No image avalable">
+              <img id="met-img" class="logo" ng-src="{{img_src+f.id}}.svg" width="100" alt="No image avalable">
             </li>
             <li  >{{f.name}}</li>
         </ui>
