--- a/Modular/partials/general.html
+++ b/Modular/partials/general.html
@@ -3,7 +3,7 @@
 		<tr>
 			<td></td>
             <td>
-            <img id="compound-image" ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{data._id}}.svg"
+            <img id="compound-image" ng-src="{{img_src+data._id}}.svg"
                      height="325" ng-click="launch_lightbox()">
             </td>
 		</tr>
@@ -45,6 +45,5 @@
 </table>
 <div hidden class="panel panel-default col-md-6" id="cpd-img">
     <!--<span onclick="$('#cpd-img').trigger('close')" style="font-size: 25pt" class="glyphicon glyphicon-remove pull-right"></span>-->
-    <img ng-src="http://lincolnpark.chem-eng.northwestern.edu/Smiles_dump/{{data._id}}.svg"
-                     width="100%">
+    <img ng-src="{{img_src+data._id}}.svg" width="100%">
 </div>
