--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -13,8 +13,8 @@
                 </div>
             </td>
 			<td id="rxn-img" ng-repeat="comp in reaction.Reactants">
-			<div style="display: inline-flex">
-                <div style="font-size:16px;line-height: 75px" ng-if="comp[0]-1">
+			<div style="display: inline-flex;align-items: center">
+                <div style="font-size:16px" ng-if="comp[0]-1">
                     {{comp[0]}}
                 </div>
 				 <a  ui-sref="acompound.overview({id:img[1]})">
@@ -26,8 +26,8 @@
 				<span style="font-size:40px"> &#8594</span>
 			</td>
 			<td ng-repeat="comp in reaction.Products" style="vertical-align:middle">
-			    <div style="display: inline-flex">
-                    <div style="font-size:16px;line-height: 75px;" ng-if= "comp[0]-1">
+			    <div style="display: inline-flex; align-items: center">
+                    <div style="font-size:16px" ng-if= "comp[0]-1">
                         {{comp[0]}}
                     </div>
 				    <a  ui-sref="acompound.overview({id:img[1]})">
