--- a/Modular/partials/compoundslist.html
+++ b/Modular/partials/compoundslist.html
@@ -1,8 +1,9 @@
 
 <br>
-<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" items-per-page="numPerPage" class="pagination-sm" boundary-links="true"  style="cursor: pointer;"></pagination>
+<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" items-per-page="numPerPage"
+            class="pagination-sm" boundary-links="true"  style="cursor: pointer;"></pagination>
 <h3 ng-show="!items">Searching...</h3>
-<h3 ng-show="items">{{items}} </h3>
+<h3 ng-show="items">{{items}} compounds found</h3>
 <table class="table table-striped table-hover">  
     <thead>  
         <tr>  
@@ -23,4 +24,5 @@
     </tbody>  
     
 </table>
-<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" items-per-page="numPerPage" class="pagination-sm" boundary-links="true"  style="cursor: pointer;"></pagination>
+<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" items-per-page="numPerPage"
+            class="pagination-sm" boundary-links="true"  style="cursor: pointer;"></pagination>
