--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -1,25 +1,15 @@
-<div>
-    <div class="col-sm-4">
-        <br><h4>{{begin}} - {{end}} of {{totalItems}} Total Hits: {{items}}</h4>
-    </div>
-    <div class="col-sm-2">
-        <br>
-        <h3 ng-show="!items">Searching...</h3>
-        <button id="met-download" ng-show="totalItems" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
-    </div>
-    <div class="col-sm-6">
-        <pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
-    </div>
-    <!--
-    <div class="col-sm-6">
-    <pagination total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
-    </div>
-    <div style="text-align: right" class="col-sm-4" >
-        <br><button id="met-download" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
-        <br><b>{{begin}} - {{end}} of {{totalItems}} Total Hits: {{items}}</b>
-        <div ui-view></div>
-    </div>
-    -->
+<div class="col-sm-4">
+    <br><h4>{{begin}} - {{end}} of {{items}} Total Hits: {{totalItems}}</h4>
+</div>
+<div class="col-sm-2">
+    <br>
+    <h3 ng-show="!items">Searching...</h3>
+    <button id="met-download" ng-show="items" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
+</div>
+<div class="col-sm-6">
+    <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
+                boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
+</div>
 <table class="table table-striped table-hover" style="text-align: center">
     <thead>
       <tr>
@@ -63,5 +53,5 @@
           <td style="vertical-align: middle">{{f.npLikeness}}</td>
         </tr>
 </table>
-<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
-</div>
+<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
+            boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
