--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -1,7 +1,7 @@
 <div class="col-md-4">
     <br><input id="rxn-filter" class=form-control type="text" ng-model="searchOn" placeholder="Filter by EC class">
 </div>
-<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm"
+<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
             items-per-page="numPerPage"  style="{cursor: pointer; vertical-align: top}"></pagination>
 <br>
 <table class="table table-striped table-hover">
@@ -39,5 +39,5 @@
 	</tbody>
 </table>
 
-<pagination class="pull-right" total-items="totalItems" page="currentPage" max-size="maxSize" class="pagination-sm"
+<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
 			items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
