--- a/Modular/partials/compoundslist.html
+++ b/Modular/partials/compoundslist.html
@@ -2,8 +2,8 @@
 <br>
 <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" items-per-page="numPerPage"
             class="pagination-sm" boundary-links="true"  style="cursor: pointer;"></pagination>
-<h3 ng-show="!items">Searching...</h3>
-<h3 ng-show="items">{{items}} compounds found</h3>
+<h3 ng-show="!(items+1)">Searching...</h3>
+<h3 ng-show="items+1">{{items}} compounds found</h3>
 <table class="table table-striped table-hover">  
     <thead>  
         <tr>  
