--- a/Modular/partials/home.html
+++ b/Modular/partials/home.html
@@ -1,4 +1,4 @@
-<div  ng-controller="resetCtl"  class="jumbotron">
+<div class="jumbotron">
     <div class="container">
         <h2><span class="text-info">M</span>etabolic <span class="text-info">I</span>n Silico <span class="text-info">N</span>etwork <span class="text-info">E</span>xpansion Databases</h2>
         <div class="row">
