finished up advanced search

--- a/Modular/partials/advancedsearch.html
+++ b/Modular/partials/advancedsearch.html
@@ -2,18 +2,23 @@
     <div class="panel panel-default">
         <div class="panel-heading"><h2>Advanced Search</h2></div>
         <div class="panel-body">
+            <div ng-hide="and+or+not" class="well">
+                Use the advanced search to write complex database queries. Select a field, enter a value text, and press
+                the "And" or "Or" indicate if matching the term is required or optional. Additionally, you may select
+                the "Use RegEx" to evaluate the value text as a Regular Expression.
+            </div>
             <table class="table">
                 <tbody>
                 <tr ng-repeat="x in and track by $index">
                     <td>AND</td>
-                    <td>{{x[0]}}: {{x[1]}}</td>
+                    <td>{{x[0]}}: {{x[1]}} <span style="color: #a9302a" ng-show="x[2]">RegEx</span></td>
                     <td class="text-right"><button class="btn  btn-sm btn-danger" ng-click="removeRow(and, $index)">
                         <span class="glyphicon glyphicon-trash"></span></button>
                     </td>
                 </tr>
                 <tr ng-repeat="x in or track by $index">
                     <td>OR</td>
-                    <td>{{x[0]}}: {{x[1]}}</td>
+                    <td>{{x[0]}}: {{x[1]}} <span style="color: #a9302a" ng-show="x[2]">RegEx</span></td>
                     <td class="text-right"><button class="btn  btn-sm btn-danger" ng-click="removeRow(or, $index)">
                         <span class="glyphicon glyphicon-trash"></span></button>
                     </td>
@@ -32,6 +37,7 @@
     <form class="form-inline" role="form">
         <select class="form-control" ng-model="selected" ng-options="f.name for f in fields"></select>
         <input class="form-control" type='text' class="form col-sm-6" ng-model='value' placeholder="">
+        <label>Use RegEx <input type="checkbox" ng-model="RegEx" ng-checked="RegEx"></label>
         <div class="btn-group">
             <div class="btn-group">
                 <button type="button" class="btn btn-primary" ng-click="addItem(and, selected.name,value)">And</button>
@@ -39,9 +45,9 @@
             <div class="btn-group">
                 <button type="button" class="btn btn-primary" ng-click="addItem(or, selected.name,value)">Or</button>
             </div>
-            <div class="btn-group">
+            <!--<div class="btn-group">
                 <button type="button" class="btn btn-primary" ng-click="addItem(not, selected.name,value)">Not</button>
-            </div>
+            </div>-->
         </div>
         <a class="btn btn-primary pull-right" style="margin: 0 auto;" ng-disabled='!(and+or+not)' ng-click="search(and,or,not)">
             <span class="glyphicon glyphicon-search"></span> Search</a>
