download option for for all search types

--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -3,7 +3,7 @@
 </div>
 <div class="col-sm-2">
     <br>
-    <h3 ng-show="!items">Searching...</h3>
+    <h3 ng-show="!totalItems">Searching...</h3>
     <button id="met-download" ng-show="totalItems" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
 </div>
 <div class="col-sm-6">
