--- a/Modular/partials/compoundslist.html
+++ b/Modular/partials/compoundslist.html
@@ -1,9 +1,16 @@
-
-<br>
-<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" items-per-page="numPerPage"
-            class="pagination-sm" boundary-links="true"  style="cursor: pointer;"></pagination>
-<h3 ng-show="!(items+1)">Searching...</h3>
-<h3 ng-show="items+1">{{items}} compounds found</h3>
+<div class="col-sm-4">
+    <br>
+    <h3 ng-show="!(items+1)">Searching...</h3>
+    <h3 ng-show="items+1">{{items}} compounds found</h3>
+</div>
+<div class="col-sm-2">
+    <br>
+    <button id="met-download" ng-show="items" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
+</div>
+<div class="col-sm-6">
+    <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
+                boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
+</div>
 <table class="table table-striped table-hover">  
     <thead>  
         <tr>  
