mostly commented the code but also refactored metabolomics search a but

--- a/Modular/partials/metabolomics.html
+++ b/Modular/partials/metabolomics.html
@@ -53,8 +53,8 @@
                     <label>Halogenated compounds <input type="checkbox" ng-model="halogens" ng-checked="0">
                     </label>
                 </div>
-                <a class="btn btn-block btn-default" style="margin: 0 auto;" ng-disabled='!adducts.length' ng-click="metSearch()">
-                <span class="glyphicon glyphicon-search"></span> Search</a>
+                <button class="btn btn-block btn-default" style="margin: 0 auto;" ng-disabled='!adducts.length' ng-click="metSearch()">
+                <span class="glyphicon glyphicon-search"></span> Search</button>
             </div>
         </div>
     </div>
