--- a/Modular/partials/operator.html
+++ b/Modular/partials/operator.html
@@ -60,15 +60,34 @@
                         ng-click="mapOperator(mapDatabase)">Map Operator</button>
             </span>
         </div>
-    </div><br>
+    </div>
+    <br>
+
+
+
     <div id="download" class="btn-group btn-group-justified">
         <div class="btn-group">
             <button type="button" class="btn btn-danger" ng-click="goEditor()" >Back to Editor</button>
         </div>
         <div class="btn-group">
+            <button type="button" class="btn btn-primary" ng-click="getImage()" >Render Image</button>
+        </div>
+        <div class="btn-group">
             <button type="button" class="btn btn-primary" ng-click="downloadFile(operator, op_name+'.dat')">
-                Download Operator</button></div>
+                Download</button>
+        </div>
     </div>
+</div>
+<div id='modal' class="modal fade">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title">{{op_name}}</h4>
+      </div>
+      <div id="img-div" class="modal-body"></div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
