--- a/Modular/partials/general.html
+++ b/Modular/partials/general.html
@@ -3,8 +3,7 @@
 		<tr>
 			<td></td>
             <td>
-            <img id="compound-image" ng-src="{{img_src+data._id}}.svg"
-                     height="325" ng-click="launch_lightbox()">
+            	<img id="compound-image" ng-src="{{img_src+data._id}}.svg" height="325" data-toggle="modal" data-target="#modal">
             </td>
 		</tr>
 		<tr>
@@ -43,7 +42,18 @@
 		</tr>
 	</tbody>  
 </table>
-<div hidden class="panel panel-default col-md-6" id="cpd-img">
-    <!--<span onclick="$('#cpd-img').trigger('close')" style="font-size: 25pt" class="glyphicon glyphicon-remove pull-right"></span>-->
-    <img ng-src="{{img_src+data._id}}.svg" width="100%">
+<div id='modal' class="modal fade">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">
+			<span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+		</button>
+        <h4 class="modal-title">Compound {{data.MINE_id}}</h4>
+      </div>
+      <div class="modal-body">
+		  <img ng-src="{{img_src+data._id}}.svg" width="100%">
+	  </div>
+    </div>
+  </div>
 </div>
