--- a/Modular/partials/reactions.html
+++ b/Modular/partials/reactions.html
@@ -17,7 +17,7 @@
                 <div style="font-size:16px" ng-if="comp[0]-1">
                     {{comp[0]}}
                 </div>
-				 <a  ui-sref="acompound.overview({id:img[1]})">
+				 <a  ui-sref="acompound.overview({id:comp[1]})">
 					<img ng-mouseover="getCompoundName($event, comp[1])" ng-src="{{img_src+comp[1]}}.svg" width="80">
 				</a>
 			</div>
@@ -30,7 +30,7 @@
                     <div style="font-size:16px" ng-if= "comp[0]-1">
                         {{comp[0]}}
                     </div>
-				    <a  ui-sref="acompound.overview({id:img[1]})">
+				    <a  ui-sref="acompound.overview({id:comp[1]})">
 					    <img ng-mouseover="getCompoundName($event, comp[1])" ng-src="{{img_src+comp[1]}}.svg" width="80">
 				    </a>
 			    </div>
