--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -10,48 +10,50 @@
     <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
                 boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
 </div>
-<table class="table table-striped table-hover" style="text-align: center">
-    <thead>
-      <tr>
-        <th>M/Z</th>
-        <th>Adduct</th>
-        <th>Formula</th>
-        <th>Compound</th>
-        <th>MINE ID</th>
-        <th>logP</th>
-        <th>Kovats RI</th>
-        <th>NP Likeness<span tooltip="NP Likeness is a quantitative measure of how similar a given compound is to known
-                                      natural products. The values range from -3 (very synthetic) to 3 (very natural)."
-                             class="glyphicon glyphicon-question-sign"></span></th>
-      </tr>
-    <tr id="filters">
-        <th><input type="text" class="form-control" style='width: 100px' placeholder="Search" ng-model="searchMZ"></th>
-        <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchAdduct"></th>
-        <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchFormula"></th>
-        <th><input type="text" class="form-control" placeholder="Search" ng-model="searchCompound"></th>
-        <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchMINE"></th>
-        <th><button class="btn btn-block btn-primary" ng-click="sortColumn='logP'; sortInvert=!sortInvert"> Sort by </button></th>
-        <th><button class="btn btn-block btn-primary" ng-click="sortColumn='minKovatsRI'; sortInvert=!sortInvert">Sort by</button></th>
-        <th><button class="btn btn-block btn-primary" ng-click="sortColumn='NP_likeness'; sortInvert=!sortInvert">Sort by</button></th>
-    </tr>
-    </thead>
-        <tr ng-repeat="f in displayData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.MINE_id})">
-          <td style="vertical-align:middle">{{f.peak_name}}</td>
-          <td style="vertical-align:middle">{{f.adduct}}</td>
-          <td style="vertical-align:middle">{{f.Formula}}</td>
-          <td style="text-align: center">
-          <ui style="list-style: none;">
-            <li>
-              <img id="met-img" class="logo" ng-src="{{img_src+f._id}}.svg" width="100" alt="No image avalable">
-            </li>
-            <li  >{{f.Names[0]}}</li>
-        </ui>
-          </td>
-          <td style="vertical-align:middle">{{f.MINE_id}}</td>
-          <td style="vertical-align: middle">{{f.logP}}</td>
-          <td style="vertical-align: middle">{{f.minKovatsRI}}-{{f.maxKovatsRI}}</td>
-          <td style="vertical-align: middle">{{f.NP_likeness}}</td>
+<div class="col-lg-12">
+    <table class="table table-striped table-hover" style="text-align: center">
+        <thead>
+          <tr>
+            <th>M/Z</th>
+            <th>Adduct</th>
+            <th>Formula</th>
+            <th>Compound</th>
+            <th>MINE ID</th>
+            <th>logP</th>
+            <th>Kovats RI</th>
+            <th>NP Likeness<span tooltip="NP Likeness is a quantitative measure of how similar a given compound is to known
+                                          natural products. The values range from -3 (very synthetic) to 3 (very natural)."
+                                 class="glyphicon glyphicon-question-sign"></span></th>
+          </tr>
+        <tr id="filters">
+            <th><input type="text" class="form-control" style='width: 100px' placeholder="Search" ng-model="searchMZ"></th>
+            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchAdduct"></th>
+            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchFormula"></th>
+            <th><input type="text" class="form-control" placeholder="Search" ng-model="searchCompound"></th>
+            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchMINE"></th>
+            <th><button class="btn btn-block btn-primary" ng-click="sortColumn='logP'; sortInvert=!sortInvert"> Sort by </button></th>
+            <th><button class="btn btn-block btn-primary" ng-click="sortColumn='minKovatsRI'; sortInvert=!sortInvert">Sort by</button></th>
+            <th><button class="btn btn-block btn-primary" ng-click="sortColumn='NP_likeness'; sortInvert=!sortInvert">Sort by</button></th>
         </tr>
-</table>
-<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
-            boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
+        </thead>
+            <tr ng-repeat="f in displayData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.MINE_id})">
+              <td style="vertical-align:middle">{{f.peak_name}}</td>
+              <td style="vertical-align:middle">{{f.adduct}}</td>
+              <td style="vertical-align:middle">{{f.Formula}}</td>
+              <td style="text-align: center">
+              <ui style="list-style: none;">
+                <li>
+                  <img id="met-img" class="logo" ng-src="{{img_src+f._id}}.svg" width="100" alt="No image avalable">
+                </li>
+                <li  >{{f.Names[0]}}</li>
+            </ui>
+              </td>
+              <td style="vertical-align:middle">{{f.MINE_id}}</td>
+              <td style="vertical-align: middle">{{f.logP}}</td>
+              <td style="vertical-align: middle">{{f.minKovatsRI}}-{{f.maxKovatsRI}}</td>
+              <td style="vertical-align: middle">{{f.NP_likeness}}</td>
+            </tr>
+    </table>
+    <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
+                boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
+</div>
